# display-driver

linux-driver/: .gitignore  CMakeLists.txt  COPYING  PROJECT_SUMMARY.md  QUICKSTART.md
linux-driver/docs/: API.md  BUILD.md  README.md  STRUCTURE.md  TROUBLESHOOTING.md
linux-driver/kernel/usbc2hd4/: chardev.c  display_enum.c  hotplug.c  it66122.c  main.c  usb_probe.c  usbc2hd4.h
linux-driver/lib/: CMakeLists.txt  usbc2hd4.pc.in
linux-driver/lib/include/: usbc2hd4_lib.h
linux-driver/lib/src/: usbc2hd4_lib.c
linux-driver/tools/examples/: enable_display.c  enumerate_example  enumerate_example.c  ioctl_test.c  set_resolution_example.c
